Fix `main` spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@ a:hover button {background: #46e; font-size: 21px;}
 @media (min-width: 801px) {
     .mobileonly {display: none !important;}
     header {position: absolute; top: 0; width: 100%;}
-    main {min-height: calc(100vh - 175px);}
+    main {min-height: calc(100vh - 155px);}
 }
 @media (max-width: 800px) {
     .desktoponly {display: none !important;}
